--- a/intranetWebServicesCo2/backup2/intranetwebservicesco2_0_1/contexts/Default.properties
+++ b/intranetWebServicesCo2/backup2/intranetwebservicesco2_0_1/contexts/Default.properties
@@ -1,5 +1,7 @@
 #this is context properties
-#Wed Jan 17 17:07:34 CET 2018
+#Wed Jan 17 17:30:07 CET 2018
 serviceUrl=http\://applications/managementplan/exportdata.asmx
 tmpDir=emas
-outDir=
+outputDir=
+intranetUsername=
+intranetPassword=
