--- a/intranetWebServicesCo2/src/main/resources/backup2/intranetwebservicesco2_0_1/contexts/Default.properties
+++ b/intranetWebServicesCo2/src/main/resources/backup2/intranetwebservicesco2_0_1/contexts/Default.properties
@@ -1,7 +1,7 @@
 #this is context properties
-#Wed Jan 17 17:30:07 CET 2018
+#Wed Jan 30 10:42:53 CET 2019
 serviceUrl=http\://applications/managementplan/exportdata.asmx
 tmpDir=emas
-outputDir=
+outputDir=d\:/emas/co2
 intranetUsername=
 intranetPassword=
